--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -4,7 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description"
+		content="A simple website where kerala university btech students can see latest notifications" />
+	<meta name="author" content="Shreyas A S" />
 	<title>Kerala University B.Tech Notifications</title>
+	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/index.css') }}">
 	<script rel="stylesheet" src="{{ url_for('static', filename='assets/js/fontawesome.js') }}"></script>
 </head>
