Replace fontawesome with svg code for the icon that I need

--- a/api/static/assets/css/index.css
+++ b/api/static/assets/css/index.css
@@ -67,6 +67,12 @@ td.pdf-link {
 	text-align: center;
 }
 
+.pdf-link svg {
+	width: 25px;
+	height: 25px;
+	fill: #90ee90;
+}
+
 th {
 	background-color: #222;
 }
