--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -4,17 +4,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description"
-		content="A simple website where kerala university btech students can see latest notifications" />
+	<meta name="description" content="A simple website where kerala university students can see latest notifications" />
 	<meta name="author" content="Shreyas A S" />
-	<title>Kerala University B.Tech Notifications</title>
+	<title>Kerala University Notifications</title>
 	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/index.css') }}">
 </head>
 
 <body>
 
-	<h2>KU B.Tech Notifications</h2>
+	<header>
+		<h2>KU Notifications</h2>
+		<div class="dropdown-container">
+			<select class="styled-select" id="course-select">
+				<option value="all">All Courses</option>
+				{% for key, value in course_map.items() %}
+				<option value="{{ key }}" {% if key==course %}selected{% endif %}>{{ value }}</option>
+				{% endfor %}
+			</select>
+		</div>
+	</header>
 
 	<table>
 		<thead>
@@ -27,31 +36,40 @@
 		</thead>
 		<tbody>
 			{% for item in data %}
-				{% if item.notifications %}
-					{% set row_count = item.notifications|length %}
-					{% for notification in item.notifications %}
-						<tr>
-							{% if loop.first %}
-								<td class="published-date" rowspan="{{ row_count }}" data-published-year="{{  item.published_year }}">{{ item.published_date }}</td>
-							{% endif %}
-							<td class="semester-num">{{ notification.semester_num }}</td>
-							<td>{{ notification.description }}</td>
-							<td class="pdf-link">
-								{% if notification.pdf_link %}
-									<a href="{{ notification.pdf_link }}" target="_blank">
-										<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path d="M64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-288-128 0c-17.7 0-32-14.3-32-32L224 0 64 0zM256 0l0 128 128 0L256 0zM216 232l0 102.1 31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31L168 232c0-13.3 10.7-24 24-24s24 10.7 24 24z"/></svg>
-									</a>
-								{% else %}
-									N/A
-								{% endif %}
-							</td>
-						</tr>
-					{% endfor %}
+			{% if item.notifications %}
+			{% set row_count = item.notifications|length %}
+			{% for notification in item.notifications %}
+			<tr>
+				{% if loop.first %}
+				<td class="published-date" rowspan="{{ row_count }}" data-published-year="{{  item.published_year }}">{{
+					item.published_date }}</td>
 				{% endif %}
+				<td class="semester-num">{{ notification.semester_num }}</td>
+				<td>{{ notification.description }}</td>
+				<td class="pdf-link">
+					{% if notification.pdf_link %}
+					<a href="{{ notification.pdf_link }}" target="_blank">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+							<path
+								d="M64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-288-128 0c-17.7 0-32-14.3-32-32L224 0 64 0zM256 0l0 128 128 0L256 0zM216 232l0 102.1 31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31L168 232c0-13.3 10.7-24 24-24s24 10.7 24 24z" />
+						</svg>
+					</a>
+					{% else %}
+					N/A
+					{% endif %}
+				</td>
+			</tr>
+			{% endfor %}
+			{% endif %}
 			{% endfor %}
 		</tbody>
 	</table>
 
+	<script>
+		document.getElementById("course-select").onchange = function () {
+			location.href = "/course/" + this.value
+		}
+	</script>
 </body>
 
 </html>
