Fix styling issue in smaller screens

--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -45,7 +45,7 @@
 					item.published_date }}</td>
 				{% endif %}
 				<td class="semester-num">{{ notification.semester_num }}</td>
-				<td>{{ notification.description }}</td>
+				<td class="description">{{ notification.description }}</td>
 				<td class="pdf-link">
 					{% if notification.pdf_link %}
 					<a href="{{ notification.pdf_link }}" target="_blank">
