--- a/api/static/assets/css/index.css
+++ b/api/static/assets/css/index.css
@@ -31,7 +31,7 @@ header {
 	outline: none;
 	appearance: none;
 	cursor: pointer;
-	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='%2390ee90' d='M5 7l5 5 5-5H5z'/%3E%3C/svg%3E");
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Cpath fill='%23555' d='M5 7l5 5 5-5H5z'/%3E%3C/svg%3E");
 	background-repeat: no-repeat;
 	background-position: right 12px center;
 	background-size: 14px;
@@ -102,12 +102,13 @@ td.description {
 .pdf-link a {
 	display: inline-block;
 	padding: 5px;
+	color: #90ee90;
 	text-align: center;
 }
 
 .pdf-link svg {
-	width: 25px;
-	height: 25px;
+	width: 20px;
+	height: 20px;
 	fill: #90ee90;
 }
 
@@ -116,14 +117,25 @@ th {
 }
 
 a {
-	color: #90ee90;
+	color: #e0e0e0;
 	text-decoration: none;
+}
+
+td.no-data {
+	padding: 15px;
+	text-align: center;
 }
 
 /* Light Theme (Only When User Prefers It) */
 @media (prefers-color-scheme: light) {
 	body {
 		background-color: #ffffff;
+		color: #333;
+	}
+
+	.styled-select {
+		border: 1px solid #ddd;
+		background-color: #fff;
 		color: #333;
 	}
 
@@ -142,6 +154,6 @@ a {
 	}
 
 	a {
-		color: green;
+		color: #333;
 	}
 }
