--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -30,7 +30,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th>Date</th>
+				<th class="date"></th>
 				<th id="semester-heading"></th>
 				<th>Description</th>
 				<th>PDF</th>
