Replace flask with lightweight bottle.py

--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -7,8 +7,8 @@
 	<meta name="description" content="A simple website where kerala university students can see latest notifications" />
 	<meta name="author" content="Shreyas A S" />
 	<title>Kerala University Notifications</title>
-	<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='assets/css/index.css') }}">
+	<link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="/static/assets/css/index.css">
 </head>
 
 <body>
