Remove jinja2 dependency

--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -20,9 +20,9 @@
 		<div class="dropdown-container">
 			<select class="styled-select" id="course-select">
 				<option value="all">All Courses</option>
-				{% for key, value in course_map.items() %}
-					<option value="{{ key }}" {% if key==course %}selected{% endif %}>{{ value }}</option>
-				{% endfor %}
+				% for key, value in course_map.items():
+					<option value="{{ key }}" % if key == course: selected % end>{{ value }}</option>
+				% end
 			</select>
 		</div>
 	</header>
@@ -37,41 +37,39 @@
 			</tr>
 		</thead>
 		<tbody>
-			{% if has_notifications %}
-				{% for item in data %}
-					{% if item.notifications %}
-						{% set row_count = item.notifications|length %}
-						{% for notification in item.notifications %}
+			% if has_notifications:
+				% for item in data:
+					% if 'notifications' in item and item['notifications']:
+						% row_count = len(item['notifications'])
+						% for i, notification in enumerate(item['notifications']):
 							<tr>
-								{% if loop.first %}
-									<td class="published-date" rowspan="{{ row_count }}" data-published-year="{{  item.published_year }}">{{
-										item.published_date }}</td>
-								{% endif %}
-								<td class="semester-num">{{ notification.semester_num }}</td>
-								<td class="description">{{ notification.description }}</td>
+								% if i == 0:  # Equivalent to loop.first
+									<td class="published-date" rowspan="{{ row_count }}" data-published-year="{{ item['published_year'] }}">{{ item['published_date'] }}</td>
+								% end
+								<td class="semester-num">{{ notification['semester_num'] }}</td>
+								<td class="description">{{ notification['description'] }}</td>
 								<td class="pdf-link">
-									{% if notification.pdf_link %}
-										<a href="{{ notification.pdf_link }}" target="_blank">
+									% if 'pdf_link' in notification and notification['pdf_link']:
+										<a href="{{ notification['pdf_link'] }}" target="_blank">
 											<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-												<path
-													d="M64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-288-128 0c-17.7 0-32-14.3-32-32L224 0 64 0zM256 0l0 128 128 0L256 0zM216 232l0 102.1 31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31L168 232c0-13.3 10.7-24 24-24s24 10.7 24 24z" />
+												<path d="M64 0C28.7 0 0 28.7 0 64L0 448c0 35.3 28.7 64 64 64l256 0c35.3 0 64-28.7 64-64l0-288-128 0c-17.7 0-32-14.3-32-32L224 0 64 0zM256 0l0 128 128 0L256 0zM216 232l0 102.1 31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31L168 232c0-13.3 10.7-24 24-24s24 10.7 24 24z" />
 											</svg>
 										</a>
-									{% else %}
+									% else:
 										N/A
-									{% endif %}
+									% end
 								</td>
 							</tr>
-						{% endfor %}
-					{% endif %}
-				{% endfor %}
-			{% else %}
+						% end
+					% end
+				% end
+			% else:
 				<tr>
 					<td colspan="4" class="no-data">
 						No New Notifications Found
 					</td>
 				</tr>
-			{% endif %}
+			% end
 		</tbody>
 	</table>
 
