--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="A simple website where kerala university students can see latest notifications" />
 	<meta name="author" content="Shreyas A S" />
-		<title>{{ page_title if page_title else "Notifications" }} - Kerala University</title>
+	<title>{{ page_title if page_title else "Notifications" }} - Kerala University</title>
 	<link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="/static/assets/css/index.css">
 </head>
@@ -58,7 +58,7 @@
 				<th class="date"></th>
 				<th id="semester-heading"></th>
 				<th>Description</th>
-				<th>PDF</th>
+				<th id="pdf-heading">P</th>
 			</tr>
 		</thead>
 		<tbody>
