--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -46,7 +46,7 @@
 		<div class="dropdown-container">
 			<select class="styled-select" id="course-select">
 				% for key, value in course_map.items():
-					<option value="{{ key }}" {{ key == course and "selected" }}>{{ value["title"] }}</option>
+					<option value="{{ key }}" {{ "selected" if key == course else "" }}>{{ value["title"] }}</option>
 				% end
 			</select>
 		</div>
