Set 'no data found' msg based on page title

--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -87,7 +87,7 @@
 			% else:
 				<tr>
 					<td colspan="4" class="no-data">
-						No New Notifications Found
+						No New {{ page_title }} Found
 					</td>
 				</tr>
 			% end
