--- a/api/templates/table.html
+++ b/api/templates/table.html
@@ -23,12 +23,12 @@
 				<span class="text">{{ page_title if page_title == "Notifications" else "" }}</span>
 			</a>
 
-			<a href="/timetable/{{ course }}">
+			<a href="/timetables/{{ course }}">
 				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
 					<path d="M0 96C0 60.7 28.7 32 64 32l384 0c35.3 0 64 28.7 64 64l0 320c0 35.3-28.7 64-64 64L64 480c-35.3 0-64-28.7-64-64L0 96zm64 0l0 64 64 0 0-64L64 96zm384 0L192 96l0 64 256 0 0-64zM64 224l0 64 64 0 0-64-64 0zm384 0l-256 0 0 64 256 0 0-64zM64 352l0 64 64 0 0-64-64 0zm384 0l-256 0 0 64 256 0 0-64z"/>
 				</svg>
 
-				<span class="text">{{ page_title if page_title == "Time Tables" else "" }}</span>
+				<span class="text">{{ page_title if page_title == "Timetables" else "" }}</span>
 			</a>
 
 			<a href="/results/{{ course }}">
@@ -98,9 +98,9 @@
 		document.addEventListener("DOMContentLoaded", () => {
 			const path = window.location.pathname;
 
-			if (path.startsWith("/timetable/")) {
+			if (path.startsWith("/timetables/")) {
 				document.getElementById("course-select").onchange = function () {
-					location.href = "/timetable/" + this.value
+					location.href = "/timetables/" + this.value
 				}
 			} else if (path.startsWith("/results/")) {
 				document.getElementById("course-select").onchange = function () {
